--- a/PVD-data/index.html
+++ b/PVD-data/index.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <script src="https://d3js.org/d3.v4.min.js"></script>
     </head>
     <body>
         <h1>Owen's website</h1>
@@ -20,6 +21,9 @@
         <h2>About this story</h2>
         <p>Here's a <a href="https://www.brown.edu/">link</a>.</p>
         <img src="images/plane.jpeg" class = "big_photo">
-        <h2>Hello again</h2>
+        <h2>Hello 2.0</h2>
+        <div id = "myTooltip">_</div>
+        <div id = "myChart"></div>
     </body>
+    <script src="scripts/scatter.js"></script>
 </html>
