--- a/PVD-data/index.html
+++ b/PVD-data/index.html
@@ -44,7 +44,7 @@
   <div class="background" id="background"></div>
   <div class="content">
     <div class="block">
-        <img src="graphs/infographic.png" style="height: 550px; display: block; margin: 0 auto;">
+        <img src="graphs/infographic.png" style="height: 550px; width: auto; display: block; margin: 0 auto;">
         <h1 style="text-align: center; font-size: 50px;"><b>10 years of travel at Providence's<br>T.F. Green Airport</b></h1>
         <h2 style="text-align: center; font-size: 30px; color: #838282"><i>(2015-2024)</i></h2>
         <p style="text-align: center; font-size: 20px; color: #838282"><i>By Owen Dahlkamp</i></p>
