More spacing between blocks

--- a/PVD-data/index.html
+++ b/PVD-data/index.html
@@ -20,9 +20,18 @@
       font-size: 18px;
     }
 
-    .block {
+    .intro {
       background: white;
       margin: 100px auto;
+      padding: 40px;
+      width: 80%;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+    }
+
+    .block {
+      background: white;
+      margin: 80vh auto;
       padding: 40px;
       width: 80%;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -43,7 +52,7 @@
 <body>
   <div class="background" id="background"></div>
   <div class="content">
-    <div class="block">
+    <div class="intro">
         <img src="graphs/infographic.png" style="height: 550px; width: auto; display: block; margin: 0 auto;">
         <h1 style="text-align: center; font-size: 50px;"><b>10 years of travel at Providence's<br>T.F. Green Airport</b></h1>
         <h2 style="text-align: center; font-size: 30px; color: #838282"><i>(2015-2024)</i></h2>
@@ -87,7 +96,7 @@
     <div class="block">
       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </div>
-    <div class="block">
+    <div class="intro">
       Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
     </div>
   </div>
