--- a/PVD-data/index.html
+++ b/PVD-data/index.html
@@ -54,13 +54,16 @@
   <div class="content">
     <div class="intro">
         <img src="graphs/infographic.png" style="height: 550px; width: auto; display: block; margin: 0 auto;">
-        <h1 style="text-align: center; font-size: 50px;"><b>10 years of travel at Providence's<br>T.F. Green Airport</b></h1>
+        <h1 style="text-align: center; font-size: 50px;"><b>10 years of travel at Providence’s<br>T.F. Green Airport</b></h1>
         <h2 style="text-align: center; font-size: 30px; color: #838282"><i>(2015-2024)</i></h2>
         <p style="text-align: center; font-size: 20px; color: #838282"><i>By Owen Dahlkamp</i></p>
       </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        <p>Each year, millions of passengers pass through the metal detectors, remove their shoes, grab a Dunkin’ Donuts coffee and patiently await their flights from the pristine, yet small, environment of Providence’s T.F. Green International Airport. Its short security lines, proximal distance to College Hill, and its iconic, marble-decorated bathrooms have made the regional-turned-international airport a departure point of choice.</p>
+        <p>Nestled in the heart of Rhode Island, T.F. Green is much smaller than some of its sister airports, with Boston Logan International Airport a 60-mile drive away and New York City just 180 miles away. With its comparatively small size comes some considerable tradeoffs.</p>
       </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        <img src="graphs/top75_destinations_map.png" style="height: 550px; width: auto; display: block; margin: 0 auto;">
+        <p>Using <a href="https://www.bts.gov/browse-statistical-products-and-data/bts-publications/data-bank-28dm-t-100-domestic-market-data">data</a> from the U.S. Bureau of Transportation Statistics, we can analyze the flight patterns of passengers traveling to and from the Ocean State. The flights themselves tend to be concentrated along the East Coast. Flying mainly to Florida, the D.C. metropolitan area, and North Carolina, flights from T.F. Green often find themselves along the eastern seaboard. But they are not limited to just this area.</p>
+        <p>Flights can also be seen landing in the middle of the continental U.S., predominantly in Texas and Chicago. A select few land in other, less-populated states, such as Missouri, Iowa, and Minnesota. Even fewer find themselves on the sunshine coast, with the only direct flights being to Las Vegas and Los Angeles.</p>
       </div><div class="block">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
       </div><div class="block">
