--- a/PVD-data/index.html
+++ b/PVD-data/index.html
@@ -53,9 +53,9 @@
   <div class="background" id="background"></div>
   <div class="content">
     <div class="intro">
-        <img src="graphs/infographic.png" style="height: 550px; width: auto; display: block; margin: 0 auto;">
+        <img src="graphs/infographic.png" style="height: 1500px; width: auto; display: block; margin: 0 auto;">
         <h1 style="text-align: center; font-size: 50px;"><b>10 years of travel at Providence’s<br>T.F. Green Airport</b></h1>
-        <h2 style="text-align: center; font-size: 30px; color: #838282"><i>(2015-2024)</i></h2>
+        <h2 style="text-align: center; font-size: 30px; color: #838282; font-weight: normal"><i>Analyzing a decade of flight data, from 2015 to 2024</i></h2>
         <p style="text-align: center; font-size: 20px; color: #838282"><i>By Owen Dahlkamp</i></p>
       </div><div class="block">
         <p>Each year, millions of passengers pass through the metal detectors, remove their shoes, grab a Dunkin’ Donuts coffee and patiently await their flights from the pristine, yet small, environment of Providence’s T.F. Green International Airport. Its short security lines, proximal distance to College Hill, and its iconic, marble-decorated bathrooms have made the regional-turned-international airport a departure point of choice.</p>
@@ -65,43 +65,24 @@
         <p>Using <a href="https://www.bts.gov/browse-statistical-products-and-data/bts-publications/data-bank-28dm-t-100-domestic-market-data">data</a> from the U.S. Bureau of Transportation Statistics, we can analyze the flight patterns of passengers traveling to and from the Ocean State. The flights themselves tend to be concentrated along the East Coast. Flying mainly to Florida, the D.C. metropolitan area, and North Carolina, flights from T.F. Green often find themselves along the eastern seaboard. But they are not limited to just this area.</p>
         <p>Flights can also be seen landing in the middle of the continental U.S., predominantly in Texas and Chicago. A select few land in other, less-populated states, such as Missouri, Iowa, and Minnesota. Even fewer find themselves on the sunshine coast, with the only direct flights being to Las Vegas and Los Angeles.</p>
       </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        <img src="graphs/top_destinations.png" style="height: 400px; width: auto; display: block; margin: 0 auto;">
+        <p>These popular travel paths are both origins and destinations. The number of passengers traveling these corridors is about equal for those treating Providence as their place of origin or destination. </p>
+        <p>The D.M.V. area was one of the most popular travel spots with a little over eight million people flying there. Florida also dominated the top 10 list thanks to Orlando, Fort Lauderdale, and Tampa. The rest are all well-known waypoints, serving as hubs for connecting flights: Charlotte, Chicago, Atlanta, Philadelphia, and Detroit.</p>
       </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        <img src="graphs/chart1.png" style="height: 700px; width: auto; display: block; margin: 0 auto;">
+        <p>For these popular destinations, airlines tend to diversify, with the most popular carriers leaving their competitors to dominate their respective air corridors. The top four airlines — American Airlines, Delta Airlines, JetBlue, and Southwest — have very little overlap in their top destinations.</p>
+        <p>American flies to Charlotte, Washington, and Philadelphia, each of which are major hubs for the airline vital in connecting passengers to destinations around the world. This trend continues with Delta in Atlanta, Detroit, and Minneapolis–Saint Paul. </p>
+        <p>Southwest operates on a less-traditional point-to-point system, in which there is no centralized hub; when airplanes land at a destination, they immediately turn around, take off, and continue to the next destination that has been mathematically calculated to minimize connections and layovers for its passengers. </p>
+        <p>While JetBlue makes cross-country flights for those traveling around the United States, its market stake is in vacation destinations for those looking to escape the notorious New England weather. Orlando, Fort Lauderdale, and Palm Beach top the charts for flights departing from and arriving at Providence.</p>
       </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        <img src="graphs/seasonal_demand.png" style="height: 700px; width: auto; display: block; margin: 0 auto;">
+        <p>But the market demand for these destinations fluctuates quite widely depending on the time of year.</p>
+        <p>Winter birds seem to flock to Florida during the winter months, especially during Spring Breaks in March and April. For locations notorious for their cold winter weather — such as Chicago and Detroit — the number of traveling passengers plummets from December through February..</p>
+        <p>Other locations, while still experiencing some swings, remain relatively steady, seemingly unaffected by the season. Such destinations include Washington, Philadelphia, Baltimore, Atlanta, and Charlotte — all of which serve as hubs to the top airlines at T.F. Green..</p>
+        <p>Irrespective of origin or destination, Providence sees some overall changes in passengers from month-to-month. It is most popular during the summer and fall months, falling off during winter and remaining relatively steady in spring..</p>
       </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </div><div class="block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </div>
-    <div class="block">
-      <img src="image1.jpg" alt="Image 1" width="100%">
-    </div>
-    <div class="block">
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </div>
-    <div class="intro">
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-    </div>
+        <p>With 68 different airlines, 32 million passengers, 373,000 flights, and 225 million miles traveled, the past decade at T.F. Green has served as Rhode Islanders’ connection to the broader world. Whether they are catching a connecting international flight at one of the major airlines’ hubs or making their way down south for some sun, the regional-turned-international airport has been steadfast in its service.</p>
+        <p>Planned expansions and additional airlines are sure to make the next decade of travel in Rhode Island that much more efficient, accessible, and versatile.</p>
   </div>
 
   <script>
