--- a/PVD-data/index.html
+++ b/PVD-data/index.html
@@ -53,7 +53,6 @@
   <div class="background" id="background"></div>
   <div class="content">
     <div class="intro">
-        
         <h1 style="text-align: center; font-size: 50px;"><b>10 years of travel at Providence’s<br>T.F. Green Airport</b></h1>
         <h2 style="text-align: center; font-size: 30px; color: #838282; font-weight: normal"><i>Analyzing a decade of flight data, from 2015 to 2024</i></h2>
         <p style="text-align: center; font-size: 20px; color: #838282"><i>By Owen Dahlkamp</i></p>
@@ -81,7 +80,11 @@
           <p>Other locations, while still experiencing some swings, remain relatively steady, seemingly unaffected by the season. Such destinations include Washington, Philadelphia, Baltimore, Atlanta, and Charlotte — all of which serve as hubs for the top airlines at T.F. Green.</p>
           <p>Irrespective of origin or destination, Providence sees some overall changes in passengers from month-to-month. It is most popular during the summer and fall months, with a downswing during winter and relatively steady demand in spring.</p>        
       </div><div class="block">
-          <p>With 68 different airlines, 32 million passengers, 373,000 flights, and 225 million miles traveled, the past decade at T.F. Green has served as Rhode Islanders’ connection to the broader world. Whether they are catching a connecting international flight at one of the major airlines’ hubs or making their way down south for some sun, the quaint but mighty airport has been steadfast in its service.</p>
+        <figure style="display: table; margin: 0 auto;">
+          <img src="TF_Green.png" style="height: auto; width: 800px; display: block;">
+          <figcaption style="font-size: 14px; color: #555; text-align: right;">Courtesy of GoPVD</figcaption>
+        </figure>        
+        <p>With 68 different airlines, 32 million passengers, 373,000 flights, and 225 million miles traveled, the past decade at T.F. Green has served as Rhode Islanders’ connection to the broader world. Whether they are catching a connecting international flight at one of the major airlines’ hubs or making their way down south for some sun, the quaint but mighty airport has been steadfast in its service.</p>
           <p><a href="https://flyri.com/riac/master-plan/" style="color:#003366">Planned expansions</a> and <a href="https://flyri.com/breeze-airways-announces-major-expansion-atrhode-island-t-f-green-international-airport/" style="color:#003366">additional airlines</a> are sure to make the next decade of travel in Rhode Island that much more efficient, accessible, and versatile.</p>
   </div>
 
