--- a/PVD-data/index.html
+++ b/PVD-data/index.html
@@ -86,6 +86,7 @@
         </figure>        
         <p>With 68 different airlines, 32 million passengers, 373,000 flights, and 225 million miles traveled, the past decade at T.F. Green has served as Rhode Islanders’ connection to the broader world. Whether they are catching a connecting international flight at one of the major airlines’ hubs or making their way down south for some sun, the quaint but mighty airport has been steadfast in its service.</p>
           <p><a href="https://flyri.com/riac/master-plan/" style="color:#003366">Planned expansions</a> and <a href="https://flyri.com/breeze-airways-announces-major-expansion-atrhode-island-t-f-green-international-airport/" style="color:#003366">additional airlines</a> are sure to make the next decade of travel in Rhode Island that much more efficient, accessible, and versatile.</p>
+          <p style="font-size:16px; color: grey; text-align:right"><i><br><br>Created as a project for DATA 1500: "Data Visualization & Narrative"<br>Brown University</i></p>
   </div>
 
   <script>
