--- a/PVD-data/index.html
+++ b/PVD-data/index.html
@@ -55,7 +55,7 @@
     <div class="intro">
         <h1 style="text-align: center; font-size: 50px;"><b>10 years of travel at Providence’s<br>T.F. Green Airport</b></h1>
         <h2 style="text-align: center; font-size: 30px; color: #838282; font-weight: normal"><i>Analyzing a decade of flight data, from 2015 to 2024</i></h2>
-        <p style="text-align: center; font-size: 20px; color: #838282"><i>By Owen Dahlkamp</i></p>
+        <p style="text-align: center; font-size: 20px; color: #838282"><i>By Owen Dahlkamp<br>May 1, 2025</i></p>
       </div><div class="block">
           <p>Each year, millions of passengers pass through the metal detectors, remove their shoes, grab a Dunkin’ Donuts coffee and patiently await their flights from the pristine, yet small, environment of Providence’s T.F. Green International Airport. Its short security lines, proximal distance to College Hill, and its iconic, marble-decorated bathrooms have made the regional-turned-international airport a departure point of choice.</p>
           <p>Nestled in the heart of Rhode Island, T.F. Green is much smaller than some of its sister airports, with Boston Logan International Airport a 60-mile drive away and New York City just 180 miles away. With its comparatively small size comes some considerable tradeoffs.</p>
